--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <header>
         <h1>Welcome to My Awesome Portfolio</h1>
+        <nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
     </header>
     
     <main>
