Add About section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     
     <main>
         <p>This is my personal website where I showcase my work.</p>
+        <section id="about">
+    <h2>About Me</h2>
+    <p>I'm a student learning web development and Git!</p>
+</section>
     </main>
 </body>
 </html>
