--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <p>I'm a student learning web development and Git!</p>
 </section>
     </main>
+    <footer>
+        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+    </footer>
 </body>
 </html>
