--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
     <header>
         <h1>Welcome to My Awesome Portfolio</h1>
         <nav>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        </nav>
     </header>
     
     <main>
         <p>This is my personal website where I showcase my work.</p>
         <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a student learning web development and Git!</p>
-</section>
+            <h2>About Me</h2>
+            <p>I'm a student learning web development and Git!</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Tyler</h2>
+            <p>Email: 800075078@fvtc.edu</p>
+        </section>
+
     </main>
     <footer>
         <p>&copy; 2025 My Portfolio. All rights reserved.</p>
